--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -94,7 +94,6 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.7.0" }
 androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.8.9" }
 androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version = "1.1.0" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version = "1.3.0" }
 androidx-legacy-support = { group = "androidx.legacy", name = "legacy-support-v13", version = "1.0.0" }
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version = "2.9.2" }
 androidx-media3-common = { group = "androidx.media3", name = "media3-common", version = "1.8.0" }
@@ -106,8 +105,9 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 androidx-room-rxjava3 = { group = "androidx.room", name = "room-rxjava3", version.ref = "room" }
 androidx-room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version = "1.1.0" }
+androidx-test-core = { group = "androidx.test", name = "core-ktx", version = "1.4.0" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.7.0" }
-androidx-test-ext = { group = "androidx.test.ext", name = "junit-ktx", version = "1.3.0" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit-ktx", version = "1.3.0" }
 androidx-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version = "2.3.0" }
 androidx-work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "work" }
